--- a/CashSplash/CashSplash/UI/Storyboard-iPhone.storyboard
+++ b/CashSplash/CashSplash/UI/Storyboard-iPhone.storyboard
@@ -34,24 +34,20 @@
                         <sections>
                             <tableViewSection headerTitle="Amount" id="5Rt-x8-qO0">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="162" id="9sT-PN-m5Y">
-                                        <rect key="frame" x="0.0" y="119" width="320" height="162"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="9sT-PN-m5Y">
+                                        <rect key="frame" x="0.0" y="119" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9sT-PN-m5Y" id="cLB-AC-SzG">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1qn-ma-blF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                                </pickerView>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter amount here" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="bs2-gl-adA">
+                                                    <rect key="frame" x="20" y="7" width="280" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done"/>
+                                                </textField>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="1qn-ma-blF" firstAttribute="top" secondItem="cLB-AC-SzG" secondAttribute="top" id="4pI-9u-iUi"/>
-                                                <constraint firstAttribute="trailing" secondItem="1qn-ma-blF" secondAttribute="trailing" id="LIZ-WY-kav"/>
-                                                <constraint firstAttribute="bottom" secondItem="1qn-ma-blF" secondAttribute="bottom" id="UCZ-IS-q1U"/>
-                                                <constraint firstItem="1qn-ma-blF" firstAttribute="leading" secondItem="cLB-AC-SzG" secondAttribute="leading" id="iIa-Ug-pXc"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -59,7 +55,7 @@
                             <tableViewSection headerTitle="Details" id="drd-jV-x2k">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="nn4-sf-yQW" detailTextLabel="TAr-BC-Paf" style="IBUITableViewCellStyleValue2" id="Wpb-ST-Yg9">
-                                        <rect key="frame" x="0.0" y="329" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="211" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wpb-ST-Yg9" id="GK1-eU-qCk">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -86,7 +82,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="N2H-sh-92C" detailTextLabel="cY1-R8-SKV" style="IBUITableViewCellStyleValue2" id="rm7-jh-9pg">
-                                        <rect key="frame" x="0.0" y="373" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="255" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rm7-jh-9pg" id="eFo-eD-ALS">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -113,7 +109,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="pGY-UJ-9dM" detailTextLabel="J9U-qK-8n8" style="IBUITableViewCellStyleValue2" id="Vg2-53-Z1h">
-                                        <rect key="frame" x="0.0" y="417" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="299" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Vg2-53-Z1h" id="hwi-N8-UXt">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -140,7 +136,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="jj9-Wo-0Sk">
-                                        <rect key="frame" x="0.0" y="461" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="343" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jj9-Wo-0Sk" id="kkR-k3-oai">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -160,57 +156,17 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection id="sOh-cF-jdj">
-                                <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Zue-VD-AGF">
-                                        <rect key="frame" x="0.0" y="525" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zue-VD-AGF" id="ctR-fz-zI9">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5uq-qX-8ud">
-                                                    <rect key="frame" x="137" y="7" width="46" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="Save">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="saveTapped:" destination="bfU-5Q-De8" eventType="touchUpInside" id="18A-9I-AZ5"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell hidden="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="7Xf-Oh-moB" style="IBUITableViewCellStyleDefault" id="3gG-FX-q4i">
-                                        <rect key="frame" x="0.0" y="569" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3gG-FX-q4i" id="1bL-lY-v4u">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Save" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7Xf-Oh-moB">
-                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
                         </sections>
                         <connections>
                             <outlet property="dataSource" destination="bfU-5Q-De8" id="rNt-JO-04J"/>
                             <outlet property="delegate" destination="bfU-5Q-De8" id="LkO-aF-bYR"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Spend" id="wJI-27-2q9"/>
+                    <navigationItem key="navigationItem" title="Spend" id="wJI-27-2q9">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Du1-Kr-Q48"/>
+                    </navigationItem>
                     <keyCommands/>
                     <connections>
-                        <outlet property="amountPicker" destination="1qn-ma-blF" id="cJ9-Fx-yJf"/>
                         <outlet property="categoryLabel" destination="TAr-BC-Paf" id="bgc-iO-7ja"/>
                         <outlet property="dateLabel" destination="J9U-qK-8n8" id="xho-NE-cx4"/>
                         <outlet property="labelLabel" destination="cY1-R8-SKV" id="NH3-UI-bYK"/>
